<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tsing.map.MainActivity"
    tools:ignore="ExtraText"
    android:addStatesFromChildren="true"> //这是什么鬼啊


    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:text="+"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/zoomin"
        android:layout_width="40dp"
        android:layout_above="@+id/position"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText"
        android:background="@android:color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:background="@android:color/white"
        android:layout_height="170dp"
        android:layout_toLeftOf="@+id/rightlayout"
        android:layout_toStartOf="@+id/rightlayout"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:id="@+id/navilayout"
        android:layout_marginBottom="0dp">

        <TextView
            android:text="@string/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/from"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <AutoCompleteTextView
            android:text="@string/mylocation"
            android:layout_width="190dp"
            android:id="@+id/fromauto"
            android:background="?attr/colorControlHighlight"
            android:layout_marginLeft="5dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            tools:ignore="RtlHardcoded"
            android:singleLine="true" />

        <TextView
            android:text="@string/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <AutoCompleteTextView
            android:id="@+id/toauto"
            android:background="?attr/colorControlHighlight"
            android:layout_width="190dp"
            android:layout_marginLeft="5dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            tools:ignore="RtlHardcoded"
            android:singleLine="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="40dp"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/weather"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_marginTop="2.5dp"
                android:background="@drawable/icon_cloud"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:layout_width="40dp"
                android:id="@+id/solve"
                android:background="@drawable/ic_direction1"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="100dp"
                android:layout_height="40dp"
                android:rotation="90"
                android:layout_weight="0.01"
                tools:ignore="ButtonStyle,RtlHardcoded"
                android:layout_marginRight="5dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/rightlayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="70dp"
        android:background="@android:color/white"
        android:visibility="visible"
        android:layout_height="200dp">

        <Button
            android:id="@+id/navi"
            android:layout_width="60dp"
            android:background="@drawable/ic_direction1"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/search"
            android:layout_width="60dp"
            android:background="@drawable/ic_map"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            tools:ignore="RtlHardcoded"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/info"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/logo"
            android:layout_height="50dp"
            android:layout_width="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/zoomout"
        android:layout_alignLeft="@+id/navilayout"
        android:layout_alignStart="@+id/navilayout"
        android:visibility="invisible"
        android:id="@+id/searlayout"
        android:layout_width="200dp"
        android:layout_alignBottom="@+id/zoomout">

        <AutoCompleteTextView
            android:id="@+id/searchbox"
            android:background="?attr/colorControlHighlight"
            android:layout_height="40dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="150dp"
            tools:ignore="RtlHardcoded"
            android:singleLine="true" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/searchbutton"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:background="@drawable/icon_search" />

    </LinearLayout>

    <Button
        android:text="@string/database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/database"
        android:layout_above="@+id/clearmap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:visibility="invisible" />

    <TextView
        android:text="@string/tour_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/switch2"
        android:layout_alignLeft="@+id/clearmap"
        android:layout_alignStart="@+id/clearmap" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch2"
        android:layout_below="@+id/textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearmap"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/rightlayout"
        android:layout_alignStart="@+id/rightlayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="170dp"
        android:background="@android:color/white"
        android:id="@+id/infolayout"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/rightlayout"
        android:layout_toStartOf="@+id/rightlayout"
        android:visibility="invisible"
        android:layout_width="200dp">

        <Button
            android:layout_height="50dp"
            android:id="@+id/button2"
            android:background="@mipmap/ic_launcher"
            android:clickable="false"
            android:layout_width="50dp" />

        <TextView
            android:text="Developer: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="Geography Information System Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.06"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="Campus Emergence Call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:text="0577-55870110"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call"
            android:layout_weight="0.32"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimaryDark" />
    </LinearLayout>

    <Button
        android:text="@string/o"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/position"
        android:maxLines="1"
        android:background="@android:color/white"
        android:layout_above="@+id/zoomout"
        android:layout_alignLeft="@+id/zoomout"
        android:layout_alignStart="@+id/zoomout" />

    <Button
        android:text="@string/zoomout"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/zoomout"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/zoomin"
        android:layout_alignStart="@+id/zoomin" />


</RelativeLayout>
